# Skypaper

./: .gitignore  LICENSE  README.md  build.sh  build_config.h.pre  install.sh  meson.build  readme.md  render.c  render.h  renderer.c  renderer.h  settings.h  shader.c  shader.h  shader_read.c  shader_read.h  skypaper.c  uniforms.c  uniforms.h  util.c  util.h  window.c  window.h
Shaders/rain/: frag.glsl
Shaders/rainbow/: frag.glsl
Shaders/wall/: .gitignore  README
glad/: glad.c
glad/include/glad/: glad.h
glad/src/: glad.c
include/glad/: glad.h
